CLOUD-3128 - EAP 7.2 UBI OpenShift image