@@ -21,6 +21,8 @@ if ! $IS_SPLIT_DATA_DEFINED && [ "x$FORBID_TX_JDBC_RECOVERY_MARKER" = "xtrue" ];
     log_warning "[`date`] Forbidden to use jdbc for recovery marker by use of variable FORBID_TX_JDBC_RECOVERY_MARKER while SPLIT_DATA is not enabled."
     log_warning "The transaction recovery marker algorithm is not capable to save recovery data and won't work."
 fi
+# when not capable to connect to JDBC recovery storage retrying n-times before exiting the container
+[[ $TX_JDBC_RECOVERY_CONNECTION_RETRY =~ ^[0-9]+$ ]] || TX_JDBC_RECOVERY_CONNECTION_RETRY=3
 
 # parameters
 # - needle to search in array
@@ -37,6 +39,9 @@ function arrContains() {
 function init_pod_name() {
   # when POD_NAME is non-zero length using that given name
 
+  # if the user specifies NODE_NAME or JBOSS_NODE_NAME - this is ONLY intended to be used by tests.
+  [ -n "${NODE_NAME}" ] && POD_NAME="${NODE_NAME}"
+  [ -n "${JBOSS_NODE_NAME}" ] && POD_NAME="${JBOSS_NODE_NAME}"
   # docker sets up container_uuid
   [ -z "${POD_NAME}" ] && POD_NAME="${container_uuid}"
   # openshift sets up the node id as host name
@@ -68,41 +73,62 @@ function startApplicationServer() {
   init_pod_name
 
   local applicationPodDir="${podsDir}/${POD_NAME}"
-  $IS_TX_SQL_BACKEND && initJdbcRecoveryMarkerProperties
-  $IS_SPLIT_DATA_DEFINED && mkdir -p "${podsDir}"
 
-  # 2) while any recovery marker matches, sleep and wait for recovery to finish
-  local waitCounter=0
-  while true; do
-
-    if isRecoveryInProgress; then
-      log_info "[`date`] Waiting to start pod ${POD_NAME} as recovery process for the pod is currently in progress"
-    else
-      # no recovery running: we are free to start the app container
-      break
+  # allow this to be skipped if we're testing, or running in docker with no db etc.
+  if [ "x${JDBC_SKIP_RECOVERY:-false}" != "xtrue" ]; then
+    if $IS_TX_SQL_BACKEND; then
+      initJdbcRecoveryMarkerProperties
+      log_info "[`date`] Using database transaction recovery marker to be saved at ${JDBC_INFO}"
+      # loop while waiting till the database recovery storage will be available
+      local loopCount=0
+      until createRecoveryDatabaseSchema; do
+        if [ $loopCount -ge $TX_JDBC_RECOVERY_CONNECTION_RETRY ]; then
+            log_error "[`date`] Tried to connect to ${JDBC_INFO} for ${TX_JDBC_RECOVERY_CONNECTION_RETRY} times without success. Exiting."
+            exit 3
+        fi
+        log_error "[`date`] Cannot create schema of database transaction recovery records. Will be retrying."
+        log_error "${JDBC_INFO} is probably not available."
+        loopCount=$((loopCount+1))
+      done
     fi
-    sleep 1
-  done
 
-  # 3) create app server data directory with name of the pod name /or/ creating pod dir jdbc record
-  if $IS_TX_SQL_BACKEND; then
-    SERVER_DATA_DIR="${podsDir}"
+    $IS_SPLIT_DATA_DEFINED && mkdir -p "${podsDir}"
 
-    local applicationPodExistence=($(${JDBC_COMMAND_PODNAME_REGISTRY} select_application -a "${applicationPodDir}"))
-    if [ "x${applicationPodExistence}" = "x" ]; then
-      ${JDBC_COMMAND_PODNAME_REGISTRY} insert -a "${applicationPodDir}" -r 'undefined'
+    # 2) while any recovery marker matches, sleep and wait for recovery to finish
+    local waitCounter=0
+    while true; do
+      if isRecoveryInProgress; then
+        log_info "[`date`] Waiting to start pod ${POD_NAME} as recovery process for the pod is currently in progress"
+      else
+        # no recovery running: we are free to start the app container
+        break
+      fi
+      sleep 1
+    done
+    # 3) create app server data directory with name of the pod name /or/ creating pod dir jdbc record
+    if $IS_TX_SQL_BACKEND; then
+      SERVER_DATA_DIR="${podsDir}"
+      local applicationPodExistence=($(${JDBC_COMMAND_PODNAME_REGISTRY} select_application -a "${applicationPodDir}"))
+      if [ "x${applicationPodExistence}" = "x" ]; then
+        ${JDBC_COMMAND_PODNAME_REGISTRY} insert -a "${applicationPodDir}" -r 'undefined'
+            if [ $? -ne 0 ]; then
+                log_error "[`date`] Cannot insert transaction recovery marker into database ${JDBC_INFO}, pod ${applicationPodDir}. Exiting."
+                exit 3
+            fi
+       fi
     fi
+    if $IS_SPLIT_DATA_DEFINED; then
+        SERVER_DATA_DIR="${applicationPodDir}/serverData"
+        mkdir -p "${SERVER_DATA_DIR}"
+
+        if [ ! -f "${SERVER_DATA_DIR}/../data_initialized" ]; then
+           init_data_dir ${SERVER_DATA_DIR}
+            touch "${SERVER_DATA_DIR}/../data_initialized"
+        fi
+    fi
+  else
+    echo "Skipping JDBC application server recovery start as JDBC_SKIP_RECOVERY is set to true"
   fi
-  if $IS_SPLIT_DATA_DEFINED; then
-    SERVER_DATA_DIR="${applicationPodDir}/serverData"
-    mkdir -p "${SERVER_DATA_DIR}"
-
-    if [ ! -f "${SERVER_DATA_DIR}/../data_initialized" ]; then
-      init_data_dir ${SERVER_DATA_DIR}
-      touch "${SERVER_DATA_DIR}/../data_initialized"
-    fi
-  fi
-
   # 4) launch server with NODE_NAME to be assigned as POD_NAME (openshift-node-name.sh uses it)
   NODE_NAME=$(truncate_jboss_node_name "${POD_NAME}") runServer "${SERVER_DATA_DIR}" &
 
@@ -137,7 +163,14 @@ function migratePV() {
   init_pod_name
   local recoveryPodName="${POD_NAME}"
 
-  $IS_TX_SQL_BACKEND && initJdbcRecoveryMarkerProperties
+  if $IS_TX_SQL_BACKEND; then
+    initJdbcRecoveryMarkerProperties
+    log_info "[`date`] Using database transaction recovery marker saved at ${JDBC_INFO}"
+    until createRecoveryDatabaseSchema; do
+      log_error "[`date`] Cannot create schema of recovery database records. Will be retrying."
+      log_error "Database ${JDBC_INFO} is probably not available."
+    done
+  fi
 
   while true ; do
 
@@ -393,13 +426,14 @@ function initJdbcRecoveryMarkerProperties() {
   JDBC_RECOVERY_USER=$(find_env "${prefix}_USERNAME")
   JDBC_RECOVERY_PASSWORD=$(find_env "${prefix}_PASSWORD")
   JDBC_RECOVERY_NAMESPACE=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
+  JDBC_INFO="${JDBC_RECOVERY_DB_HOST}:${JDBC_RECOVERY_DB_PORT}/${JDBC_RECOVERY_DATABASE}"
 
   local jdbcTableSuffix=${TX_JDBC_RECOVERY_MARKER_TABLE_SUFFIX//-/}
   [ "x${jdbcTableSuffix}" != "x" ] && jdbcTableSuffix="_${jdbcTableSuffix}"
   JDBC_RECOVERY_TABLE="recmark${jdbcTableSuffix}"
   JDBC_PODNAME_REGISTRY_TABLE="recpodreg${jdbcTableSuffix}"
 
-    case "$db" in
+  case "$db" in
     "MYSQL")
       JDBC_RECOVERY_DB_TYPE='mysql'
       ;;
@@ -412,12 +446,24 @@ function initJdbcRecoveryMarkerProperties() {
   # do not reduce logging when debug is enabled
   [ "x${SCRIPT_DEBUG}" = "xtrue" ] && LOGGING_PROPERTIES=""
 
+  local add_modules=""
+  if [ "${JAVA_VERSION}" = "11.0" ]; then
+    add_modules=" --add-modules java.se "
+  fi
+
   # one table works as storage for recovery markers, other stores information about started pods
-  local jdbcCommand="java $LOGGING_PROPERTIES -jar $JBOSS_HOME/jboss-modules.jar -mp $JBOSS_HOME/modules/ io.narayana.openshift-recovery -y ${JDBC_RECOVERY_DB_TYPE} -o ${JDBC_RECOVERY_DB_HOST} -p ${JDBC_RECOVERY_DB_PORT} -d ${JDBC_RECOVERY_DATABASE} -u ${JDBC_RECOVERY_USER} -s ${JDBC_RECOVERY_PASSWORD}"
+  local jdbcCommand="java ${add_modules} $LOGGING_PROPERTIES -jar $JBOSS_HOME/jboss-modules.jar -mp $JBOSS_HOME/modules/ io.narayana.openshift-recovery -y ${JDBC_RECOVERY_DB_TYPE} -o ${JDBC_RECOVERY_DB_HOST} -p ${JDBC_RECOVERY_DB_PORT} -d ${JDBC_RECOVERY_DATABASE} -u ${JDBC_RECOVERY_USER} -s ${JDBC_RECOVERY_PASSWORD}"
   JDBC_COMMAND_RECOVERY_MARKER="${jdbcCommand} -t ${JDBC_RECOVERY_TABLE} -c"
   JDBC_COMMAND_PODNAME_REGISTRY="${jdbcCommand} -t ${JDBC_PODNAME_REGISTRY_TABLE} -c"
+}
 
-  # creating the database schema
+# creating the database schema
+# parameters:
+# - no params, expected to be called after the init properties is invoked
+function createRecoveryDatabaseSchema() {
   ${JDBC_COMMAND_RECOVERY_MARKER} create
+  [ $? -ne 0 ] && return 1
   ${JDBC_COMMAND_PODNAME_REGISTRY} create
+  [ $? -ne 0 ] && return 1
+  return 0
 }
